--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/pag vinos/css/style.css">
+ <link rel="stylesheet" href="/css/style.css">
     <title>Vinos Argentinos Catalogo</title>
 
 </head>
@@ -39,7 +39,7 @@
 <h2>Catalogo</h2>
 
 <div class="card3">
-    <img src="/pag vinos/images/catalogo.jpg" class="card-img" alt="catalogo">
+    <img src="images/catalogo.jpg" class="card-img" alt="catalogo">
     <div class="card-img-overlay">
       <h5 class="card-title">Catalogo Norteño</h5>
       <p class="card-text">Las principales denominaciones de origen españolas están representadas en nuestra vinoteca con un gran
