agrego dos puntos en link css

--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -20,7 +20,7 @@
 <header>
 
     <div class="encabezado">
-        <img class="logotipo" src="/pag vinos/images/logo1.jpg" alt="logo">
+        <img class="logotipo" src="/images/logo1.jpg" alt="logo">
         <h1>Vinos Argentinos</h1>
 
 
@@ -39,7 +39,7 @@
 <h2>Catalogo</h2>
 
 <div class="card3">
-    <img src="images/catalogo.jpg" class="card-img" alt="catalogo">
+    <img src="/images/catalogo.jpg" class="card-img" alt="catalogo">
     <div class="card-img-overlay">
       <h5 class="card-title">Catalogo Norteño</h5>
       <p class="card-text">Las principales denominaciones de origen españolas están representadas en nuestra vinoteca con un gran
@@ -54,7 +54,7 @@
   </div>
 
   <div class="card3">
-    <img src="/pag vinos/images/catalogo2.jpg" class="card-img" alt="catalogo2">
+    <img src="/images/catalogo2.jpg" class="card-img" alt="catalogo2">
     <div class="card-img-overlay">
       <h5 class="card-title">Catalogo del Sur</h5>
       <p class="card-text">Tipos de vinos según las cepas
