--- a/html/contacto.html
+++ b/html/contacto.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="encabezado">
-      <img class="logotipo" src="/pag vinos/images/logo1.jpg" alt="logo">
+      <img class="logotipo" src="/images/logo1.jpg" alt="logo">
       <h1>Vinos Argentinos</h1>
      
       
