--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="encabezado">
-            <img class="logotipo" src="/pag vinos/images/logo1.jpg" alt="logo">
+            <img class="logotipo" src="/images/logo1.jpg" alt="logo">
             <h1>Vinos Argentinos</h1>
            
             
@@ -35,7 +35,7 @@
     <h2> Vinificación</h2>
 
     <div class="card text-bg-dark">
-        <img src="/pag vinos/images/bodega.png" class="card-img" alt="bodega">
+        <img src="/images/bodega.png" class="card-img" alt="bodega">
         <div class="card-img-overlay">
           <h5 class="card-title">Nosotros</h5>
           <p class="card-text">La producción del vino ha ido añadiendo cada vez más elementos tecnológicos a medida que el hombre ha ido experimentando y adquiriendo cada vez más conocimiento acerca de los procesos. Se puede decir que muchos vinos se echaron a perder hasta comprender que la vinificación es un proceso puramente anaeróbico, es decir sin la presencia de oxígeno. El primer paso para la vinificación es la vendimia, o recolección de la uva, que resulta ser un proceso delicado ya que tiene que pasar el menor tiempo posible desde su recolección hasta su elaboración.
